[package]
name = "rascii"
description = "Image to ASCII Art converter"
readme = "README.md"
repository = "https://github.com/ajmwagar/rascii"
license = "MIT"
version = "0.1.1"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
image = "0.21.2"
termcolor = "1"
